--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,14 @@
+/* Full size background image */
+html, #container, .inner { background-color:transparent;}
+html {
+  background:url(background.jpg) center center no-repeat fixed;
+  background-size:cover;
+}
+/* body {
+  max-width:800px;
+  margin:25px auto;
+} */
+
 body {
     margin: 60px auto;
     width: 70%;
