--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 /* Full size background image */
 html, #container, .inner { background-color:transparent;}
 html {
-  background:url(background.jpg) center center no-repeat fixed;
+  background:url(../background.jpeg) center center no-repeat fixed;
   background-size:cover;
 }
 /* body {
