--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 /* Full size background image */
 html, #container, .inner { background-color:transparent;}
 html {
-  background:url(../phuket.png) center center no-repeat fixed;
+  background:url(../blog_background.png) center center no-repeat fixed;
   background-size:contain;
 }
 /* body {
