--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,7 @@ blockquote p:last-child {
 /* Full size background image */
 html, #container, .inner { background-color:transparent;}
 html {
-  background:url(../blog_background.jpg) center center no-repeat fixed;
+  background:url("blog_background.jpg") center center no-repeat fixed;
   background-size:cover;
 }
 body {
@@ -105,7 +105,13 @@ header, #content, footer {
   padding:25px;
   color:#FFFFFF; 
 }
-
+#logo{
+  height: 20%;
+  width: 20%;
+}
+#content{
+  text-align: center;
+}
 /* Menu Links */
 ul.main-menu {
   margin: 0;
@@ -128,11 +134,22 @@ ul.main-menu li a.active {
   color:#FFFFFF;
   border-bottom-color:#EF6D3D;
 }
+#home{
+  align-items: center;
+}
+#profile{
+  width: 50%;
+  height: 50%;
+}
+ul.contact-list li{
+  display: inline-block;
+  padding: 10px;
+}
 
 /* Utility classes */
-.hide {
+/* .hide {
   display:none;
-}
-.show {
+} */
+/* .show {
   display:block;
-}
+} */
